# vinyl

./: .gitignore  Cargo.toml  Cross.toml  Makefile  build.rs
src/: image.rs  main.rs  song.rs
src/audio/: mod.rs
src/audio/oss/: mod.rs  resampler.rs
src/audio/rodio/: mod.rs
src/components/: mod.rs  now_playing.rs
src/input/: mod.rs
src/miyoo/: evdev.rs  mod.rs  platform.rs
ui/: main.slint  model.slint  player.slint  playlist.slint  progress-bar.slint  util.slint
ui/assets/: LICENSE.txt
ui/components/: playlist.slint  prelude.slint  progress-bar.slint
ui/views/: library.slint  player.slint
